Changed Prediction Error
The error is being caused due to the updation mismatch between count and current_state's shape. The tensor moves with the updation of current_state and the previous tensor, however count only updates by one, this leads to an error where count may be 500 but the current_state's shape is > 512. The updation strictly should take place with accordance to the input tensor.

--- a/OpenAI_GPT_Pred.ipynb
+++ b/OpenAI_GPT_Pred.ipynb
@@ -122,7 +122,7 @@
     "            # Update the best_scores, for first time just add the topk values directly\n",
     "            for i in range(beam_width):\n",
     "                best_scoes[i] = top_v[0][i].item()\n",
-    "            count += 1\n",
+    "            count += torch_tensor.shape[1]\n",
     "        else: # After first step\n",
     "            # Prepare the current_state by concating original input and decoded beam indexes\n",
     "            current_state = torch.cat((torch_tensor, torch.tensor(beam_indexes).to(device)), dim=1)\n",
